--- a/educate.html
+++ b/educate.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Educate Yourself</title>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MFK8KTL6SS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MFK8KTL6SS');
+</script>
+
   <style>
     :root {
       --bg-color: #121212;
@@ -128,8 +139,23 @@
   </div>
 
   <footer>
-  Made by Mohab (<a href="https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2" target="_blank" style="color: blue; text-decoration: underline;">@r4_ce</a>)
+  Made by Mohab (
+    <a href="#" onclick="openInstagram()" style="color: blue; text-decoration: underline;">@r4_ce</a>
+  )
 </footer>
+
+<script>
+  function openInstagram() {
+    const appLink = "instagram://user?username=r4_ce";
+    const webLink = "https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2";
+
+    // يحاول يفتح التطبيق، ولو ما اشتغل يفتح الموقع بعد شويه
+    window.location = appLink;
+    setTimeout(() => {
+      window.location = webLink;
+    }, 1500); // 1.5 ثانية لو التطبيق مش موجود
+  }
+</script>
 
   <script>
     let isArabic = false;
