--- a/result.html
+++ b/result.html
@@ -1,9 +1,18 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Calorie Results</title>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MFK8KTL6SS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-MFK8KTL6SS');
+</script>
   <style>
     :root {
       --bg-color: #0e0e0e;
@@ -12,13 +21,11 @@
       --accent-color: #00ffd5;
       --footer-bg: #00ffd5;
       --footer-text: black;
-
       /* Gradient Colors */
       --gradient-start: #0a0a0a;
       --gradient-mid: #111;
       --gradient-end: #0d0d0d;
     }
-
     body.light-mode {
       --bg-color: #ffffff;
       --text-color: #000000;
@@ -26,13 +33,11 @@
       --accent-color: #00bfa5;
       --footer-bg: #dddddd;
       --footer-text: #000000;
-
       /* Light gradient */
       --gradient-start: #f5f5f5;
       --gradient-mid: #fff;
       --gradient-end: #f7f7f7;
     }
-
     /* Animated background */
     body {
       margin: 0;
@@ -46,13 +51,11 @@
       animation: gradientBG 15s ease infinite;
       transition: all 0.5s ease;
     }
-
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-
     h1 {
       color: var(--accent-color);
       margin-bottom: 20px;
@@ -60,7 +63,6 @@
       font-size: 2.5rem;
       letter-spacing: 1px;
     }
-
     .result-box {
       background-color: var(--box-bg);
       padding: 20px;
@@ -72,20 +74,16 @@
       margin-bottom: 20px;
       transition: box-shadow 0.3s ease;
     }
-
     .result-box:hover {
       box-shadow: 0 0 20px rgba(0, 255, 213, 0.5);
     }
-
     p, ul {
       text-align: left;
       padding: 0 10px;
     }
-
     label {
       text-align: left !important;
     }
-
     button {
       padding: 10px 20px;
       background-color: var(--accent-color);
@@ -97,12 +95,10 @@
       font-weight: bold;
       transition: all 0.3s ease;
     }
-
     button:hover {
       transform: scale(1.05);
       background-color: #00c9a3;
     }
-
     footer {
       margin-top: 40px;
       font-size: 12px;
@@ -115,7 +111,6 @@
       margin-right: auto;
       transition: background-color 0.3s, color 0.3s;
     }
-
     #toggle-theme,
     #toggle-language {
       position: fixed;
@@ -132,21 +127,17 @@
       transition: all 0.3s ease;
       box-shadow: 0 4px 10px rgba(0, 255, 213, 0.3);
     }
-
     #toggle-theme:hover,
     #toggle-language:hover {
       transform: scale(1.05);
       background-color: #00c9a3;
     }
-
     #toggle-theme {
       right: 10px;
     }
-
     #toggle-language {
       left: 10px;
     }
-
     /* Print Button */
     #print-pdf-btn {
       background-color: #ff9800;
@@ -160,13 +151,11 @@
       box-shadow: 0 4px 10px rgba(255, 152, 0, 0.4);
       transition: all 0.3s ease;
     }
-
     #print-pdf-btn:hover {
       background-color: #f57c00;
       box-shadow: 0 6px 14px rgba(255, 152, 0, 0.6);
       transform: translateY(-2px);
     }
-
     /* Learn More Button - New Styling */
     #learn-more-btn {
       display: inline-block;
@@ -182,13 +171,11 @@
       cursor: pointer;
       transition: all 0.3s ease;
     }
-
     #learn-more-btn:hover {
       background: linear-gradient(45deg, #00c9a3, #00d9ff);
       box-shadow: 0 6px 16px rgba(0, 201, 163, 0.7);
       transform: translateY(-2px);
     }
-
     #learn-more-btn::after {
       content: '';
       position: absolute;
@@ -199,11 +186,9 @@
       opacity: 0.2;
       transition: opacity 0.3s ease;
     }
-
     #learn-more-btn:hover::after {
       opacity: 0.4;
     }
-
     @media (max-width: 600px) {
       #print-pdf-btn,
       #learn-more-btn {
@@ -211,25 +196,21 @@
         font-size: 16px;
         text-align: center;
       }
-
       p, ul {
         text-align: left !important;
       }
     }
-
     /* Arabic Text Only Alignment */
     .arabic-text {
       text-align: right !important;
       direction: rtl !important;
     }
-
     /* Print Styles */
     @media print {
       body {
-        background-color: white !important;
-        color: black !important;
+        background-color: var(--bg-color) !important;
+        color: var(--text-color) !important;
       }
-
       #toggle-theme,
       #toggle-language,
       footer,
@@ -237,35 +218,30 @@
       #learn-more-btn {
         display: none;
       }
-
       .result-box {
         box-shadow: none !important;
         page-break-inside: avoid;
         border: none !important;
         background-color: transparent !important;
       }
-
       h1 {
-        color: #000 !important;
+        color: var(--accent-color) !important;
       }
-
       a::after {
         content: " (" attr(href) ")";
         font-size: 12px;
         color: gray;
       }
-
       .print-header {
         display: block;
         text-align: center;
         margin-bottom: 20px;
         font-size: 18px;
-        color: #000;
+        color: var(--text-color);
         font-weight: bold;
-        border-bottom: 2px solid #ddd;
+        border-bottom: 2px solid var(--accent-color);
         padding-bottom: 10px;
       }
-
       .arabic-text {
         text-align: right !important;
         direction: rtl !important;
@@ -276,43 +252,35 @@
 <body class="theme-dark">
   <button id="toggle-language" onclick="toggleLanguage()">عربي</button>
   <button id="toggle-theme" onclick="toggleTheme()">Toggle Theme</button>
-
   <h1 id="title">Calorie Results</h1>
   <div id="results"></div>
-
   <!-- Save as PDF Button -->
   <button id="print-pdf-btn" onclick="window.print()">
     📄 <span id="btn-print-text">Save as PDF</span>
   </button>
-
   <!-- Learn More Button with subtle animation -->
   <a id="learn-more-btn" href="educate.html">
     <span id="learn-more-btn-text">Learn More About Nutrition</span>
   </a>
-
   <footer>
     Made by Mohab (
     <a href="#" onclick="openInstagram()" style="color: blue; text-decoration: underline;">@r4_ce</a>
     )
   </footer>
-
   <!-- Instagram Handler -->
   <script>
     function openInstagram() {
       const appLink = "instagram://user?username=r4_ce";
       const webLink = "https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2";
-
       window.location = appLink;
       setTimeout(() => {
         window.location = webLink;
       }, 1500);
     }
   </script>
-
   <!-- Logic Script -->
   <script>
     let currentLang = "en";
-
     function toggleTheme() {
       document.body.classList.toggle("light-mode");
       const themeBtn = document.getElementById("toggle-theme");
@@ -322,27 +290,20 @@
         themeBtn.style.backgroundColor = "#00ffd5";
       }
     }
-
     function toggleLanguage() {
       currentLang = currentLang === "en" ? "ar" : "en";
-
       // Update button texts
       document.getElementById("toggle-language").innerText =
         currentLang === "en" ? "عربي" : "English";
-
       // Update title and other buttons
       document.getElementById("title").innerText =
         currentLang === "en" ? "Calorie Results" : "نتائج السعرات";
-
       document.getElementById("btn-print-text").innerText =
         currentLang === "en" ? "Save as PDF" : "احفظ كـ PDF";
-
       document.getElementById("learn-more-btn-text").innerText =
         currentLang === "en" ? "Learn More About Nutrition" : "تعلم المزيد عن التغذية";
-
       displayResults();
     }
-
     function getQueryParams() {
       const params = new URLSearchParams(window.location.search);
       return {
@@ -353,13 +314,11 @@
         activity: params.get('activity'),
       };
     }
-
     function calculateBMR({ weight, height, age, gender }) {
       return gender === 'male'
         ? 10 * weight + 6.25 * height - 5 * age + 5
         : 10 * weight + 6.25 * height - 5 * age - 161;
     }
-
     function getActivityMultiplier(activity) {
       const multipliers = {
         sedentary: 1.2,
@@ -370,7 +329,6 @@
       };
       return multipliers[activity] || 1.2;
     }
-
     function calculateMacros(calories, weight, proteinPerKg) {
       const protein = Math.round(weight * proteinPerKg);
       const proteinCals = protein * 4;
@@ -379,10 +337,8 @@
       const carbs = Math.round((calories - proteinCals - fatCals) / 4);
       return { protein, carbs, fats };
     }
-
     function showMacros(calories, weight, proteinPerKg) {
       const { protein, carbs, fats } = calculateMacros(calories, weight, proteinPerKg);
-
       return `
         <p class="${currentLang === "ar" ? "arabic-text" : ""}">
           <strong>${currentLang === "en" ? "Macros" : "العناصر الغذائية"}:</strong><br>
@@ -391,39 +347,30 @@
           ${currentLang === "en" ? "Fats" : "دهون"}: ${fats}g
         </p>`;
     }
-
     function displayResults() {
       const data = getQueryParams();
-
       if (!data.weight || !data.height || !data.age || !data.gender || !data.activity) {
         document.getElementById('results').innerHTML = `
           <p style='color:red;'>${currentLang === "en" ? "Missing or invalid data. Please go back and fill all fields." : "يوجد نقص أو خطأ في البيانات. ارجع واملأ جميع الحقول."}</p>
         `;
         return;
       }
-
       const bmr = calculateBMR(data);
       const tdee = bmr * getActivityMultiplier(data.activity);
-
       const bulkLight = Math.round(tdee * 1.1);
       const bulkModerate = Math.round(tdee * 1.2);
       const bulkAggressive = Math.round(tdee * 1.3);
-
       const cutLight = Math.round(tdee * 0.9);
       const cutModerate = Math.round(tdee * 0.8);
       const cutAggressive = Math.round(tdee * 0.7);
-
       const today = new Date().toLocaleDateString(currentLang === "en" ? "en-US" : "ar-SA");
-
       document.getElementById('results').innerHTML = `
         <div class="print-header">${currentLang === "en" ? "Printed on" : "تم الطباعة في"}: ${today}</div>
-
         <div class="result-box" style="border-left: 5px solid #00ffd5;">
           <h2 class="${currentLang === "ar" ? "arabic-text" : ""}">⚖️ ${currentLang === "en" ? "Maintenance Calories" : "سعرات الثبات"}</h2>
           <p>${Math.round(tdee)} kcal</p>
           ${showMacros(tdee, data.weight, 1.9)}
         </div>
-
         <div class="result-box" style="border-left: 5px solid #00ffc7;">
           <h2 class="${currentLang === "ar" ? "arabic-text" : ""}">💪 ${currentLang === "en" ? "Bulking Calories" : "سعرات التضخيم"}</h2>
           <div class="result-box" style="margin: 10px;">
@@ -442,7 +389,6 @@
             <p class="${currentLang === "ar" ? "arabic-text" : ""}">${currentLang === "en" ? "Expected weekly gain" : "الزيادة المتوقعة أسبوعيًا"}: ${(data.weight * 0.005).toFixed(2)} kg</p>
           </div>
         </div>
-
         <div class="result-box" style="border-left: 5px solid #00ebff;">
           <h2 class="${currentLang === "ar" ? "arabic-text" : ""}">🏋️‍♂️ ${currentLang === "en" ? "Cutting Calories" : "سعرات التنشيف"}</h2>
           <div class="result-box" style="margin: 10px;">
@@ -463,8 +409,8 @@
         </div>
       `;
     }
-
     window.onload = displayResults;
   </script>
 </body>
 </html>
+```
