--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       --footer-bg: #00ffd5;
       --footer-text: black;
       --input-bg: #333;
-      /* Animated background colors */
       --gradient-start: #0a0a0a;
       --gradient-mid: #111;
       --gradient-end: #0d0d0d;
@@ -38,12 +37,10 @@
       --footer-bg: #dddddd;
       --footer-text: #000000;
       --input-bg: #ddd;
-      /* Light gradient */
       --gradient-start: #f5f5f5;
       --gradient-mid: #fff;
       --gradient-end: #f7f7f7;
     }
-    /* Animated background */
     body {
       margin: 0;
       padding: 0;
@@ -192,22 +189,19 @@
     <a href="#" onclick="openInstagram()" style="color: blue; text-decoration: underline;">@r4_ce</a>
     )
   </footer>
-  <!-- Instagram Link Handler -->
   <script>
     function openInstagram() {
       const appLink = "instagram://user?username=r4_ce";
-      const webLink = " https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2";
+      const webLink = "https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2";
       window.location = appLink;
       setTimeout(() => {
         window.location = webLink;
       }, 1500);
     }
   </script>
-  <!-- Theme & Language Logic -->
   <script>
     function toggleTheme() {
       document.body.classList.toggle("light-mode");
-      // Update button styles based on theme
       const themeBtn = document.getElementById("toggle-theme");
       if (document.body.classList.contains("light-mode")) {
         themeBtn.style.backgroundColor = "#00bfa5";
@@ -280,39 +274,33 @@
       document.body.dir = currentLang === 'ar' ? 'rtl' : 'ltr';
     }
   </script>
-  <!-- Google Apps Script Integration -->
-<!-- تم التعديل فقط في السكربت الأخير -->
-<script>
-  function submitData(event) {
-    event.preventDefault(); // Prevent form from submitting the traditional way
-
-    // Collect form data
-    const formData = {
-      weight: document.getElementById('weight').value,
-      height: document.getElementById('height').value,
-      age: document.getElementById('age').value,
-      gender: document.getElementById('gender').value,
-      activity: document.getElementById('activity').value,
-    };
-
-    // Send data to Google Apps Script
-fetch('https://script.google.com/macros/s/AKfycbwhB2kasqx40tdAJOSfVyWo4HCVhhZ4AA1oadnk_mU1iwJ5az291B5K5gj6KCCju3b2/exec', {
-      method: 'POST',
-      body: JSON.stringify(formData),
-      headers: {
-        'Content-Type': 'application/json',
-      },
-    })
-      .then((response) => response.text()) // تم التعديل هنا بدل json()
-      .then((data) => {
-        alert('تم حفظ البيانات بنجاح!');
-        console.log(data);
+  <script>
+    function submitData(event) {
+      event.preventDefault();
+      const formData = {
+        weight: document.getElementById('weight').value,
+        height: document.getElementById('height').value,
+        age: document.getElementById('age').value,
+        gender: document.getElementById('gender').value,
+        activity: document.getElementById('activity').value,
+      };
+      fetch('https://script.google.com/macros/s/AKfycbx-ZDdAH99VNVzmuSxHWrRt8fpW3ZtOsRsmxOpqK5l1nCr1ueBKMSc9xT-h87zSzzH0/exec', {
+        method: 'POST',
+        body: JSON.stringify(formData),
+        headers: {
+          'Content-Type': 'application/json',
+        },
       })
-      .catch((error) => {
-        console.error('حدث خطأ:', error);
-        alert('حدث خطأ أثناء حفظ البيانات.');
-      });
-  }
-</script>
- </body>
+        .then((response) => response.text())
+        .then((data) => {
+          alert('تم حفظ البيانات بنجاح!');
+          console.log(data);
+        })
+        .catch((error) => {
+          console.error('حدث خطأ:', error);
+          alert('حدث خطأ أثناء حفظ البيانات.');
+        });
+    }
+  </script>
+</body>
 </html>
